# janus-medspacy

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.claude/audits/: audit-2026-01-16.md
.github/workflows/: build_release.yml  python-app.yml
medspacy/: _extensions.py  util.py  visualization.py
medspacy/common/: medspacy_matcher.py
medspacy/context/: context.py
medspacy/io/: db_connect.py  doc_consumer.py
medspacy/postprocess/: postprocessing_rule.py  postprocessor.py
medspacy/preprocess/: preprocessor.py
notebooks/: 03-Information-Extraction.ipynb  11a-QuickUMLS_Extraction_Defaults.ipynb
requirements/: requirements.txt  requirements_tests.txt
tests/: conftest.py  test_extensions.py  test_medspacy.py  test_notebooks.py
tests/common/: test_medspacy_matcher.py  test_regex_matcher.py
tests/context/: test_context_component.py  test_context_graph.py  test_context_modifier.py  test_context_rule.py
tests/io/: benchmark_db_write.py  test_db_connect.py  test_db_reader.py  test_db_writer.py  test_doc_consumer.py  test_pipeline.py
tests/lang/de/pipeline/: test_pipeline_de.py
tests/lang/es/pipeline/: test_pipeline_es.py
tests/lang/es/quickumls/: test_es_quickumls_spangroup.py
tests/preprocess/: test_preprocessing_rule.py
tests/quickumls/: test_quickumls_entity.py  test_quickumls_spangroup.py
tests/section_detection/: test_section_rule.py  test_sectionizer.py
tests/serialization/: test_serialization.py
tests/target_matcher/: test_concept_tagger.py  test_target_matcher.py  test_target_rule.py
(+12 files in other folders)
