[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janus-medspacy"
dynamic = ["version","dependencies","readme"]
authors = [{name = "medSpaCy"}]
description = "Fork of medSpaCy - Library for clinical NLP with spaCy."
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

# Prevent installation alongside original medspacy (they share the same import name)
[project.optional-dependencies]
# Note: pip doesn't support formal conflicts, but we document the incompatibility here
# Users must uninstall medspacy before installing janus-medspacy

#https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
version={file = "medspacy/VERSION"}
readme={file = ['README.md'], content-type = "text/markdown"}

[project.urls]
Source = "https://github.com/lawrencericher/janus-medspacy"
Upstream = "https://github.com/medspacy/medspacy"

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]